# template

./: Dockerfile  README.md  SKILL.md  pyproject.toml  requirements.txt
src/application/controller/: tris.dsl
src/application/model/: user.json
src/application/policy/presentation/: routes.dsl
src/application/repository/: user.dsl
src/application/view/component/: card.xml
src/application/view/layout/: auth.xml
src/application/view/page/: index.xml
